
classDiagram
    class Game {
        -board: Board
        -snake: Snake
        -food: Food
        +__init__()
        +run()
        +handle_events()
        +update_game_state()
        +draw_game_elements()
    }
    class Board {
        -width: int
        -height: int
        -grid_size: int
        +__init__(width: int, height: int, grid_size: int)
        +draw_grid()
    }
    class Snake {
        -body: list
        -direction: str
        +__init__()
        +move()
        +grow()
        +check_collision()
    }
    class Food {
        -x: int
        -y: int
        +__init__(x: int, y: int)
        +generate_new_food()
    }
    Game --> Board
    Game --> Snake
    Game --> Food
